Bug 331368 r=mscott Assertions in content iterator